{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1172,
  "lineage": "9833dcea-25aa-3bed-6413-6d78febad4e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "My-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:internet-gateway/igw-026449770355353d7",
            "id": "igw-026449770355353d7",
            "owner_id": "309351180660",
            "tags": {
              "Name": "My-IGW"
            },
            "tags_all": {
              "Name": "My-IGW"
            },
            "vpc_id": "vpc-093b0fb0b98b1b190"
          },
          "dependencies": [
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "myALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:loadbalancer/app/myALB/411ed7ecc7cbbea2",
            "arn_suffix": "app/myALB/411ed7ecc7cbbea2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "myALB-1511060535.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:loadbalancer/app/myALB/411ed7ecc7cbbea2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fb55e7a51741286a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-047b46ff166c04bed"
              },
              {
                "subnet_id": "subnet-0ddb46152aec58a36"
              }
            ],
            "subnets": [
              "subnet-047b46ff166c04bed",
              "subnet-0ddb46152aec58a36"
            ],
            "tags": {
              "Name": "myALB"
            },
            "tags_all": {
              "Name": "myALB"
            },
            "vpc_id": "vpc-093b0fb0b98b1b190",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.myALB-SG",
            "aws_subnet.My-Pub-sub01",
            "aws_subnet.My-Pub-sub02",
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "myALB-Listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:listener/app/myALB/411ed7ecc7cbbea2/19b2ab0df1e410ed",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:listener/app/myALB/411ed7ecc7cbbea2/19b2ab0df1e410ed",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:loadbalancer/app/myALB/411ed7ecc7cbbea2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.myALB",
            "aws_security_group.myALB-SG",
            "aws_subnet.My-Pub-sub01",
            "aws_subnet.My-Pub-sub02",
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "myALB-Listner-Rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:targetgroup/myALB-TG/51f110b9a193f134",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:listener-rule/app/myALB/411ed7ecc7cbbea2/19b2ab0df1e410ed/90567b8e2a1a8c94",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:listener-rule/app/myALB/411ed7ecc7cbbea2/19b2ab0df1e410ed/90567b8e2a1a8c94",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:listener/app/myALB/411ed7ecc7cbbea2/19b2ab0df1e410ed",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.myALB",
            "aws_lb_listener.myALB-Listner",
            "aws_lb_target_group.myALB-TG",
            "aws_security_group.myALB-SG",
            "aws_subnet.My-Pub-sub01",
            "aws_subnet.My-Pub-sub02",
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "myALB-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:targetgroup/myALB-TG/51f110b9a193f134",
            "arn_suffix": "targetgroup/myALB-TG/51f110b9a193f134",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:targetgroup/myALB-TG/51f110b9a193f134",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "myALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-093b0fb0b98b1b190"
          },
          "dependencies": [
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyPrivateRTB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:route-table/rtb-0b346fc5b5183d297",
            "id": "rtb-0b346fc5b5183d297",
            "owner_id": "309351180660",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "My-Private-RTB"
            },
            "tags_all": {
              "Name": "My-Private-RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-093b0fb0b98b1b190"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyPublicRTB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:route-table/rtb-0c08b2f5e1d89b6d8",
            "id": "rtb-0c08b2f5e1d89b6d8",
            "owner_id": "309351180660",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026449770355353d7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My-Public-RTB"
            },
            "tags_all": {
              "Name": "My-Public-RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-093b0fb0b98b1b190"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.My-IGW",
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyPrivateRDSRTBassociation01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfba127b93c8173a",
            "route_table_id": "rtb-0b346fc5b5183d297",
            "subnet_id": "subnet-0d35508d039094c4f"
          },
          "dependencies": [
            "aws_route_table.MyPrivateRTB",
            "aws_subnet.My-Private-RDS-sub01",
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyPrivateRDSRTBassociation02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8904558ec0e7eb3",
            "route_table_id": "rtb-0b346fc5b5183d297",
            "subnet_id": "subnet-05e43b866247b7939"
          },
          "dependencies": [
            "aws_route_table.MyPrivateRTB",
            "aws_subnet.My-Private-RDS-sub02",
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyPrivateRTBassociation01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ef17f6cdce7d718",
            "route_table_id": "rtb-0b346fc5b5183d297",
            "subnet_id": "subnet-00803b38a0d5a4567"
          },
          "dependencies": [
            "aws_route_table.MyPrivateRTB",
            "aws_subnet.My-Private-sub01",
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyPrivateRTBassociation02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4eb5a8e4939da48",
            "route_table_id": "rtb-0b346fc5b5183d297",
            "subnet_id": "subnet-072b2ef8ce41fc6e2"
          },
          "dependencies": [
            "aws_route_table.MyPrivateRTB",
            "aws_subnet.My-Private-sub02",
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyPublicRTBassociation01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec25e814d141f4fe",
            "route_table_id": "rtb-0c08b2f5e1d89b6d8",
            "subnet_id": "subnet-047b46ff166c04bed"
          },
          "dependencies": [
            "aws_internet_gateway.My-IGW",
            "aws_route_table.MyPublicRTB",
            "aws_subnet.My-Pub-sub01",
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyPublicRTBassociation02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c8643b92c7d7540",
            "route_table_id": "rtb-0c08b2f5e1d89b6d8",
            "subnet_id": "subnet-0ddb46152aec58a36"
          },
          "dependencies": [
            "aws_internet_gateway.My-IGW",
            "aws_route_table.MyPublicRTB",
            "aws_subnet.My-Pub-sub02",
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:security-group/sg-0fb55e7a51741286a",
            "description": "Allow HTTP(80/tcp)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "all",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb55e7a51741286a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP(80/tcp)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myALB-SG",
            "name_prefix": "",
            "owner_id": "309351180660",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myALB-SG"
            },
            "tags_all": {
              "Name": "myALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-093b0fb0b98b1b190"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myInstanceSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:security-group/sg-01fd17bded2e5c8df",
            "description": "Allow HTTP(80/tcp)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fd17bded2e5c8df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP(80/tcp)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP(8080/tcp)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH(22/tcp)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "myInstanceSG",
            "name_prefix": "",
            "owner_id": "309351180660",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MyInstanceSG"
            },
            "tags_all": {
              "Name": "MyInstanceSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-093b0fb0b98b1b190"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.My-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My-Private-RDS-sub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:subnet/subnet-0d35508d039094c4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d35508d039094c4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309351180660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-Private-RDS-subnet-01"
            },
            "tags_all": {
              "Name": "My-Private-RDS-subnet-01"
            },
            "vpc_id": "vpc-093b0fb0b98b1b190"
          },
          "dependencies": [
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My-Private-RDS-sub02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:subnet/subnet-05e43b866247b7939",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e43b866247b7939",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309351180660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-Private-RDS-subnet-02"
            },
            "tags_all": {
              "Name": "My-Private-RDS-subnet-02"
            },
            "vpc_id": "vpc-093b0fb0b98b1b190"
          },
          "dependencies": [
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My-Private-sub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:subnet/subnet-00803b38a0d5a4567",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00803b38a0d5a4567",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309351180660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-Private-subnet-01"
            },
            "tags_all": {
              "Name": "My-Private-subnet-01"
            },
            "vpc_id": "vpc-093b0fb0b98b1b190"
          },
          "dependencies": [
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My-Private-sub02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:subnet/subnet-072b2ef8ce41fc6e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072b2ef8ce41fc6e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309351180660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-Private-subnet-02"
            },
            "tags_all": {
              "Name": "My-Private-subnet-02"
            },
            "vpc_id": "vpc-093b0fb0b98b1b190"
          },
          "dependencies": [
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My-Pub-sub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:subnet/subnet-047b46ff166c04bed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047b46ff166c04bed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309351180660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-Public-subnet-01"
            },
            "tags_all": {
              "Name": "My-Public-subnet-01"
            },
            "vpc_id": "vpc-093b0fb0b98b1b190"
          },
          "dependencies": [
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My-Pub-sub02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:subnet/subnet-0ddb46152aec58a36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddb46152aec58a36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309351180660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-Public-subnet-02"
            },
            "tags_all": {
              "Name": "My-Public-subnet-02"
            },
            "vpc_id": "vpc-093b0fb0b98b1b190"
          },
          "dependencies": [
            "aws_vpc.My-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:vpc/vpc-093b0fb0b98b1b190",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d5369b00d5b19d4",
            "default_route_table_id": "rtb-04404fe893d8e8a6b",
            "default_security_group_id": "sg-055390a55aa4dcde0",
            "dhcp_options_id": "dopt-0f0dc59896b00d9cc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093b0fb0b98b1b190",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04404fe893d8e8a6b",
            "owner_id": "309351180660",
            "tags": {
              "Name": "My-vpc"
            },
            "tags_all": {
              "Name": "My-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}